refactor: Simplify DatabaseRouteDefinitionRepository to use record and remove unnecessary annotations